--- a/style.css
+++ b/style.css
@@ -111,16 +111,18 @@ hr {
     width: 100%;
     height: 100%;
     padding: 5rem;
+
+    &:not(#presentacion, #conclusiones)
 }
 
-#presentacion {background-color: color-mix(in srgb, white  100%, #00749A 0%);}
-#animacion1   {background-color: color-mix(in srgb, white   90%, #00749A 5%);}
-#animacion2   {background-color: color-mix(in srgb, white   80%, #00749A 10%);}
-#animacion3   {background-color: color-mix(in srgb, white   70%, #00749A 15%);}
-#animacion4   {background-color: color-mix(in srgb, white   60%, #00749A 20%);}
-#animacion5   {background-color: color-mix(in srgb, white   50%, #00749A 25%);}
-#notfound     {background-color: color-mix(in srgb, white   40%, #00749A 30%);}
-#conclusines  {background-color: color-mix(in srgb, white   30%, #00749A 35%);}
+#presentacion  {border-left: 35px solid color-mix(in srgb, white  100%, #00749A 0%);}
+#animacion1    {border-left: 35px solid color-mix(in srgb, white   90%, #00749A 5%);}
+#animacion2    {border-left: 35px solid color-mix(in srgb, white   80%, #00749A 10%);}
+#animacion3    {border-left: 35px solid color-mix(in srgb, white   70%, #00749A 15%);}
+#animacion4    {border-left: 35px solid color-mix(in srgb, white   60%, #00749A 20%);}
+#animacion5    {border-left: 35px solid color-mix(in srgb, white   50%, #00749A 25%);}
+#notfound      {border-left: 35px solid color-mix(in srgb, white   40%, #00749A 30%);}
+#conclusines   {border-left: 35px solid color-mix(in srgb, white   30%, #00749A 35%);}
 
 /* Presentación */
 #presentacion {
@@ -162,7 +164,227 @@ hr {
     color: #00749A;
 }
 
-/* Animación 1 */
+/* 
+Animación 1 
+Lectura Sistóllica
+*/
+
+#animacion1 {
+    display: flex;
+    align-items: center;
+
+    & p {
+        line-height: 1.5;
+        margin-bottom: 1rem;
+    }
+
+    & p:nth-child(1) {
+        font-weight: bold;
+    }
+
+    & .cntTxt {
+        width: 50%;
+        padding: 0 5%;
+
+        & code { 
+            font-size: 1rem;
+            background: rgb(236, 236, 236);
+            padding: 0.25rem 0.5rem;
+            border-radius: 4px;
+        }
+        
+        & span {
+        font-style: italic;
+        color: #00749A;
+        font-weight: 600;
+        }
+    }
+
+    & .cntSvg {
+        width: 50%;
+    }
+}
+
+/* Trancisiona los puntos con delay de 0.1 segundos de forma infinita 
+en un tiempo de 5 segundos */
+.puntosPA1  {animation: puntosPAuno     5s ease 0.1s infinite;}
+.puntosPA2  {animation: puntosPAdos     5s ease 0.2s infinite;}
+.puntosPA3  {animation: puntosPAtres    5s ease 0.3s infinite;}
+.puntosPA4  {animation: puntosPAcuatro  5s ease 0.4s infinite;} 
+.puntosPA5  {animation: puntosPAcinco   5s ease 0.5s infinite;} 
+.puntosPA6  {animation: puntosPAseis    5s ease 0.6s infinite;} 
+.puntosPA7  {animation: puntosPAsiete   5s ease 0.7s infinite;} 
+.puntosPA8  {animation: puntosPAocho    5s ease 0.8s infinite;} 
+.puntosPA9  {animation: puntosPAnueve   5s ease 0.9s infinite;} 
+.puntosPA10 {animation: puntosPAdiez    5s ease 1.0s infinite;}
+.puntosPA11 {animation: puntosPAonce    5s ease 1.1s infinite;}
+
+
+/* los valores de 'y' en los @Keyframes permiten el 
+movimiento de los puntos en la gráfica de manera vertica */
+@keyframes puntosPAuno {
+    0%  {y: 410;}
+    20% {y: 363;}
+    80% {y: 363;}
+    100%{y: 410;}
+}
+@keyframes puntosPAdos {
+    0%  {y: 410;}
+    20% {y: 363;}
+    80% {y: 363;}
+    100%{y: 410;}
+}
+@keyframes puntosPAtres {
+    0%  {y: 410;}
+    20% {y: 383;}
+    80% {y: 383;}
+    100%{y: 410;}
+}
+@keyframes puntosPAcuatro {
+    0%  {y: 410;}
+    20% {y: 391;}
+    80% {y: 391;}
+    100%{y: 410;}
+}
+@keyframes puntosPAcinco {
+    0%  {y: 410;}
+    20% {y: 359;}
+    80% {y: 359;}
+    100%{y: 410;}
+}
+@keyframes puntosPAseis {
+    0%  {y: 410;}
+    20% {y: 399;}
+    80% {y: 399;}
+    100%{y: 410;}
+}
+@keyframes puntosPAsiete {
+    0%  {y: 410;}
+    20% {y: 349;}
+    80% {y: 349;}
+    100%{y: 410;}
+}
+@keyframes puntosPAocho {
+    0%  {y: 410;}
+    20% {y: 363;}
+    80% {y: 363;}
+    100%{y: 410;}
+}
+@keyframes puntosPAnueve {
+    0%  {y: 410;}
+    20% {y: 379;}
+    80% {y: 379;}
+    100%{y: 410;}
+}
+@keyframes puntosPAdiez {
+    0%  {y: 410;}
+    20% {y: 346;}
+    80% {y: 346;}
+    100%{y: 410;}
+}
+@keyframes puntosPAonce{
+    0%  {y: 410;}
+    20% {y: 379;}
+    80% {y: 379;}
+    100%{y: 410;}
+}
+
+/* trancision de la trayectoria de polyline  */
+.lineaDia {
+    animation: trazoDia 5s ease infinite;
+}
+
+
+/* stroke-dashoffset, realiza la extension de separacin de trazo 
+para simular el recorrido de lectura en gráfica */
+@keyframes trazoDia {
+    0%  {stroke-dashoffset: 300;}
+    20% {stroke-dashoffset: 300;}
+    80% {stroke-dashoffset: 00;}
+    100%{stroke-dashoffset: 300;}
+}
+
+/* lineas en los puntos de lectura que interpretan las tolerancias
+registradas en la gráfica */
+.sist1  { animation: lineaSisuno     5s ease 0.1s infinite; } 
+.sist2  { animation: lineaSisdos     5s ease 0.2s infinite; } 
+.sist3  { animation: lineaSistres    5s ease 0.3s infinite; } 
+.sist4  { animation: lineaSiscuatro  5s ease 0.4s infinite; } 
+.sist5  { animation: lineaSiscinco   5s ease 0.5s infinite; } 
+.sist6  { animation: lineaSisseis    5s ease 0.6s infinite; } 
+.sist7  { animation: lineaSissiete   5s ease 0.7s infinite; } 
+.sist8  { animation: lineaSisocho    5s ease 0.8s infinite; } 
+.sist9  { animation: lineaSisnueve   5s ease 0.9s infinite; }
+.sist10 { animation: lineaSisdiez    5s ease 1.0s infinite; }
+.sist11 { animation: lineaSisonce    5s ease 1.1s infinite; }
+
+/* transicion de opacidad en el recorrido del trazo */
+@keyframes lineaSisuno {
+    0%  {filter: opacity(0);}
+    20% {filter: opacity(0);}
+    80% {filter: opacity(1);}
+    100%{filter: opacity(0);}
+}
+@keyframes lineaSisdos {
+    0%  {filter: opacity(0);}
+    20% {filter: opacity(0);}
+    80% {filter: opacity(1);}
+    100%{filter: opacity(0);}
+}
+@keyframes lineaSistres {
+    0%  {filter: opacity(0);}
+    20% {filter: opacity(0);}
+    80% {filter: opacity(1);}
+    100%{filter: opacity(0);}
+}
+@keyframes lineaSiscuatro {
+    0%  {filter: opacity(0);}
+    20% {filter: opacity(0);}
+    80% {filter: opacity(1);}
+    100%{filter: opacity(0);}
+}
+@keyframes lineaSiscinco {
+    0%  {filter: opacity(0);}
+    20% {filter: opacity(0);}
+    80% {filter: opacity(1);}
+    100%{filter: opacity(0);}
+}
+@keyframes lineaSisseis {
+    0%  {filter: opacity(0);}
+    20% {filter: opacity(0);}
+    80% {filter: opacity(1);}
+    100%{filter: opacity(0);}
+}
+@keyframes lineaSissiete {
+    0%  {filter: opacity(0);}
+    20% {filter: opacity(0);}
+    80% {filter: opacity(1);}
+    100%{filter: opacity(0);}
+}
+@keyframes lineaSisocho {
+    0%  {filter: opacity(0);}
+    20% {filter: opacity(0);}
+    80% {filter: opacity(1);}
+    100%{filter: opacity(0);}
+}
+@keyframes lineaSisnueve {
+    0%  {filter: opacity(0);}
+    20% {filter: opacity(0);}
+    80% {filter: opacity(1);}
+    100%{filter: opacity(0);}
+}
+@keyframes lineaSisdiez {
+    0%  {filter: opacity(0);}
+    20% {filter: opacity(0);}
+    80% {filter: opacity(1);}
+    100%{filter: opacity(0);}
+}
+@keyframes lineaSisonce {
+    0%  {filter: opacity(0);}
+    20% {filter: opacity(0);}
+    80% {filter: opacity(1);}
+    100%{filter: opacity(0);}
+}
 
 
 /* Animación 2 */
