Animacion 2 transicion en aros

--- a/style.css
+++ b/style.css
@@ -116,6 +116,7 @@ hr {
 
 #presentacion {
     border-left: 35px solid color-mix(in srgb, white 100%, #00749A 0%);
+
     & .u {
         text-align: center;
         width: 150px;
@@ -123,34 +124,13 @@ hr {
     }
 }
 
-#animacion1 {
-    border-left: 35px solid color-mix(in srgb, white 90%, #00749A 5%);
-}
-
-#animacion2 {
-    border-left: 35px solid color-mix(in srgb, white 80%, #00749A 10%);
-}
-
-#animacion3 {
-    border-left: 35px solid color-mix(in srgb, white 70%, #00749A 15%);
-}
-
-#animacion4 {
-    border-left: 35px solid color-mix(in srgb, white 60%, #00749A 20%);
-}
-
-#animacion5 {
-    border-left: 35px solid color-mix(in srgb, white 50%, #00749A 25%);
-}
-
-#notfound {
-    border-left: 35px solid color-mix(in srgb, white 40%, #00749A 30%);
-}
-
-#conclusines {
-    border-left: 35px solid color-mix(in srgb, white 30%, #00749A 35%);
-}
-
+#animacion1  {border-left: 35px solid color-mix(in srgb, white 90%, #00749A  5%);}
+#animacion2  {border-left: 35px solid color-mix(in srgb, white 80%, #00749A 10%);}
+#animacion3  {border-left: 35px solid color-mix(in srgb, white 70%, #00749A 15%);}
+#animacion4  {border-left: 35px solid color-mix(in srgb, white 60%, #00749A 20%);}
+#animacion5  {border-left: 35px solid color-mix(in srgb, white 50%, #00749A 25%);}
+#notfound    {border-left: 35px solid color-mix(in srgb, white 40%, #00749A 30%);}
+#conclusines {border-left: 35px solid color-mix(in srgb, white 30%, #00749A 35%);}
 /* Presentación */
 #presentacion {
     text-align: end;
@@ -170,7 +150,7 @@ hr {
 #presentacion>ul {
     text-align: start;
     margin-right: 70px;
-    
+
     & li {
         margin-left: 90px;
         list-style: none;
@@ -201,7 +181,8 @@ Animación 1
 Lectura Sistóllica
 */
 
-#animacion1 {
+#animacion1,
+#animacion2 {
     display: flex;
     align-items: center;
 
@@ -758,6 +739,80 @@ registradas en la gráfica */
 
 /* Animación 2 */
 
+.cls-1 {
+    fill: url(#Degradado_sin_nombre_7-3);
+}
+
+.cls-2 {
+    fill: url(#Degradado_sin_nombre_7-2);
+}
+
+.cls-3 {
+    fill: #0adffa;
+}
+
+.cls-4 {
+    fill: url(#Degradado_sin_nombre_7-4);
+}
+
+.cls-5 {
+    fill: url(#Degradado_sin_nombre_7-5);
+}
+
+.cls-6 {
+    fill: url(#Degradado_sin_nombre_7);
+}
+
+
+.aroExterno {
+    transform: rotateY(0deg) translateX(0px);
+    animation: aroExterno 2s  ease infinite alternate;
+
+}
+@keyframes aroExterno {
+    to {transform: rotateY(45deg) translateX(-80px);}
+}
+
+
+.nivel1 {
+    fill: #00749A;
+    transform: rotateY(0deg) translateX(0px);
+    
+    animation: nivel1 2s ease infinite alternate;
+}
+@keyframes nivel1 {
+    to {transform: rotateY(45deg) rotateX(0deg) translateX(-40px);}
+}
+
+.center{
+    transform-origin: 25% 25%;
+    animation: center 2s ease 
+    infinite alternate;
+}
+
+@keyframes center {
+    to {transform: rotateX(-450deg) rotateY(450deg) rotateZ(150deg);}
+}
+
+.nivel3 {
+    transform: rotateY(0deg) translateX(0px);
+    animation: nivel3 2s  ease infinite alternate;
+}
+
+@keyframes nivel3 {
+    to {transform: rotateY(45deg) translateX(20px);}
+}
+
+.nivel4 {
+    transform: rotateY(0deg) translateX(0px);
+    animation: nivel4 2s  ease infinite alternate;
+}
+
+@keyframes nivel4 {
+    to {transform: rotateY(45deg) translateX(100px);}
+}
+
+
 
 /* Animación 3 */
 
@@ -787,7 +842,7 @@ registradas en la gráfica */
         width: 40px;
         cursor: pointer;
     }
-    
+
     #menuCerrar {
         z-index: 1;
     }
@@ -804,11 +859,12 @@ registradas en la gráfica */
         align-items: end;
         right: 0;
         transform: translateX(100%);
-        transition: transform 0.6s ease;
+        transition: transform cubic-bezier(0.075, 0.82, 0.165, 1) 2s;
         background-color: #00749A;
 
         & nav {
-            margin-top:5rem ;
+            margin-top: 5rem;
+
             & a {
                 color: white;
                 padding-right: 5rem;
@@ -843,7 +899,7 @@ registradas en la gráfica */
         margin-left: 0%;
     }
 
-    
+
     #animacion1,
     #animacion2,
     #animacion3,
@@ -858,7 +914,7 @@ registradas en la gráfica */
     #presentacion {
         text-align: center;
         border-left: 0;
-        
+
     }
 
     #presentacion>ul {
@@ -874,15 +930,17 @@ registradas en la gráfica */
         text-align: center;
         margin: 50;
     }
+
     .actividad p:nth-child(2) {
         padding: 30px 0;
     }
+
     #animacion1 {
         flex-direction: column;
 
         & .cntTxt {
             width: 90%;
-            padding:0 0 0 0;
+            padding: 0 0 0 0;
         }
 
         & .cntSvg {
