--- a/style.css
+++ b/style.css
@@ -106,7 +106,6 @@ hr {
 #animacion3,
 #animacion4,
 #animacion5,
-#notfound,
 #conclusiones {
     width: 100%;
     height: 100%;
@@ -182,10 +181,13 @@ Lectura Sistóllica
 */
 
 #animacion1,
-#animacion2 {
+#animacion2,
+#animacion3,
+#animacion4,
+#animacion5 {
     display: flex;
     align-items: center;
-
+    flex-wrap: wrap;
     & p {
         line-height: 1.5;
         margin-bottom: 1rem;
@@ -216,91 +218,42 @@ Lectura Sistóllica
     & .cntSvg {
         width: 50%;
     }
+
+    & .cntCode {
+        
+        width: 80%;
+        margin: 0 auto;
+    }
 }
 
 /* Trancisiona los puntos con delay de 0.1 segundos de forma infinita 
 en un tiempo de 5 segundos */
-.puntosPA1 {
-    animation: puntosPAuno 5s ease 0.1s infinite;
-}
-
-.puntosPA2 {
-    animation: puntosPAdos 5s ease 0.2s infinite;
-}
-
-.puntosPA3 {
-    animation: puntosPAtres 5s ease 0.3s infinite;
-}
-
-.puntosPA4 {
-    animation: puntosPAcuatro 5s ease 0.4s infinite;
-}
-
-.puntosPA5 {
-    animation: puntosPAcinco 5s ease 0.5s infinite;
-}
-
-.puntosPA6 {
-    animation: puntosPAseis 5s ease 0.6s infinite;
-}
-
-.puntosPA7 {
-    animation: puntosPAsiete 5s ease 0.7s infinite;
-}
-
-.puntosPA8 {
-    animation: puntosPAocho 5s ease 0.8s infinite;
-}
-
-.puntosPA9 {
-    animation: puntosPAnueve 5s ease 0.9s infinite;
-}
-
-.puntosPA10 {
-    animation: puntosPAdiez 5s ease 1.0s infinite;
-}
-
-.puntosPA11 {
-    animation: puntosPAonce 5s ease 1.1s infinite;
-}
-
+.puntosPA1  {animation: puntosPAuno 5s ease 0.1s infinite;}
+.puntosPA2  {animation: puntosPAdos 5s ease 0.2s infinite;}
+.puntosPA3  {animation: puntosPAtres 5s ease 0.3s infinite;}
+.puntosPA4  {animation: puntosPAcuatro 5s ease 0.4s infinite;}
+.puntosPA5  {animation: puntosPAcinco 5s ease 0.5s infinite;}
+.puntosPA6  {animation: puntosPAseis 5s ease 0.6s infinite;}
+.puntosPA7  {animation: puntosPAsiete 5s ease 0.7s infinite;}
+.puntosPA8  {animation: puntosPAocho 5s ease 0.8s infinite;}
+.puntosPA9  {animation: puntosPAnueve 5s ease 0.9s infinite;}
+.puntosPA10 {animation: puntosPAdiez 5s ease 1.0s infinite;}
+.puntosPA11 {animation: puntosPAonce 5s ease 1.1s infinite;}
 
 /* los valores de 'y' en los @Keyframes permiten el 
 movimiento de los puntos en la gráfica de manera vertica */
 @keyframes puntosPAuno {
-    0% {
-        y: 410;
-    }
-
-    20% {
-        y: 363;
-    }
-
-    80% {
-        y: 363;
-    }
-
-    100% {
-        y: 410;
-    }
+      0% {y: 410;}
+     20% {y: 363;}
+     80% {y: 363;}
+    100% {y: 410;}
 }
 
 @keyframes puntosPAdos {
-    0% {
-        y: 410;
-    }
-
-    20% {
-        y: 363;
-    }
-
-    80% {
-        y: 363;
-    }
-
-    100% {
-        y: 410;
-    }
+      0% {y: 410;}
+     20% {y: 363;}
+     80% {y: 363;}
+    100% {y: 410;}
 }
 
 @keyframes puntosPAtres {
@@ -763,26 +716,20 @@ registradas en la gráfica */
     fill: url(#Degradado_sin_nombre_7);
 }
 
-
+ /* Trancisiona del aro mayor */
 .aroExterno {
     transform: rotateY(0deg) translateX(0px);
     animation: aroExterno 2s  ease infinite alternate;
-
 }
-@keyframes aroExterno {
-    to {transform: rotateY(45deg) translateX(-80px);}
-}
+@keyframes aroExterno {to {transform: rotateY(45deg) translateX(-80px);}}
 
-
+/* Primer grupo de aros seccionados (puntos y lineas) */
 .nivel1 {
     fill: #00749A;
     transform: rotateY(0deg) translateX(0px);
-    
     animation: nivel1 2s ease infinite alternate;
 }
-@keyframes nivel1 {
-    to {transform: rotateY(45deg) rotateX(0deg) translateX(-40px);}
-}
+@keyframes nivel1 {to {transform: rotateY(45deg) rotateX(0deg) translateX(-40px);}}
 
 .center{
     transform-origin: 25% 25%;
@@ -790,9 +737,7 @@ registradas en la gráfica */
     infinite alternate;
 }
 
-@keyframes center {
-    to {transform: rotateX(-450deg) rotateY(450deg) rotateZ(150deg);}
-}
+@keyframes center {to {transform: rotateX(-450deg) rotateY(450deg) rotateZ(150deg);}}
 
 .nivel3 {
     transform: rotateY(0deg) translateX(0px);
