--- a/style.css
+++ b/style.css
@@ -15,10 +15,6 @@ body {
     position: relative;
 }
 
-:root{
-    font-size: 16px;
-}
-
 /* mantiene el menu visible en todo momento de la navegación */
 
 .cntMenu {
@@ -92,15 +88,10 @@ body {
     }
 }
 
-
 .cntAnimaciones {
     width: 100%;
     height: 100%;
     margin-left: 15%;
-}
-
-.cntAnima {
-    position: relative;
 }
 
 hr {
@@ -115,26 +106,19 @@ hr {
 #animacion3,
 #animacion4,
 #animacion5,
-#conclusiones {   
-    width: 2rem;
-    padding: 5rem;
-<<<<<<< HEAD
-    
-=======
-    position: absolute;
-    left: 0;
-    top: 0;
+#conclusiones {
+    width: 100%;
     height: 100%;
+    padding: 5rem;
 
->>>>>>> 94efabec42dd855b9d79eb5efce4fb5775f35035
 }
 
 #presentacion {
     border-left: 35px solid color-mix(in srgb, white 100%, #00749A 0%);
 
-    & .icon__unir--black {
+    & .u {
         text-align: center;
-        width: 16rem;;
+        width: 150px;
         margin-bottom: 3rem;
     }
 }
@@ -149,7 +133,6 @@ hr {
 /* Presentación */
 #presentacion {
     text-align: end;
-    
 }
 
 #presentacion>h2 {
@@ -714,7 +697,7 @@ registradas en la gráfica */
     fill: url(#Degradado_sin_nombre_7);
 }
 
- /* Transiciona del aro mayor */
+ /* Trancisiona del aro mayor */
 .aroExterno {
     transform: rotateY(0deg) translateX(0px);
     animation: aroExterno 2s  ease infinite alternate;
@@ -878,7 +861,7 @@ registradas en la gráfica */
         padding: 30px 0;
     }
 
-    #animacion1, #animacion2 {
+    #animacion1 {
         flex-direction: column;
 
         & .cntTxt {
@@ -892,16 +875,4 @@ registradas en la gráfica */
         }
     }
 
-}
-
-
-main{
-    display: grid;
-    grid-template-columns: 250px 1fr;
-    & aside{
-
-    }
-    & section{
-
-    }
 }
